# cargo-test-scripts

./: Cargo.toml  README.md
src/: de.rs  main.rs  ser.rs
tests/: Cargo.toml  integration.rs
