[package]
name = "cargo-test-scripts"
version = "0.1.0"
edition = "2021"

[[package.metadata.test-script]]
name = "my-test" 
timeout = 1000
script = [
	"bash -c 'echo hello && false'"
]
[[package.metadata.test-script]]
name = "my-test3"
script = [
	"echo hello hi"
]

[dependencies]
chrono = "0.4"
clap = "4"
gethostname = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-xml-rs = "0.6"
toml = { version = "0", default-features = false, features = ["parse"] }
xshell = "0.2"

[dev-dependencies]
git2 = "0.16"
