[package]
description = "A JUnit compatible test script driver"
authors = ["Jeff Caffrey-Hill <jeff@caffreyhill.com>"]
license = "MIT"
name = "cargo-test-scripts"
repository = "https://github.com/ReverentEngineer/cargo-test-scripts"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = "4"
gethostname = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-xml-rs = "0.6"
toml = { version = "0", default-features = false, features = ["parse"] }
xshell = "0.2"

[dev-dependencies]
git2 = "0.16"
